  - Default charset variable can be used to change charset used by US
    English translation (#1195728).
  - Fix for search. On fallback also use UID SEARCH.
  - Tweak IMAP connection error display (#1203154).
  - Add robots noindex/nofollow meta tag to SquirrelMail generated pages.
  - Fix typo in addrbook_search.php.
  - Gracefully recover from over quota error while sending a mail (#1145144).

Version 1.4.4 - 21 January 2005
-------------------------------
  - Fix listcommands plugin to include src/ in compose links.
  - Fix listcommands plugin to behave like normal reply/compose
    links, and return to message page that originally called from.
  - Max upload file size now correctly handles a '-1' value, meaning
    unlimited (#1094569). 
  - Send 8-bit username or password as literals (#1081259).
  - configtest.php now checks whether default language is actually
    present.
  - Fix 'plus instead of space in downloaded file name' issue,
    which was introduced in 1.4.4-RC1 (#1076733).
  - Disabled unmaintained Thai translation.
  - Security: Added hook for Preferences Backend to resolve potential
    insecure file inclusions. [CAN-2005-0075]
  - Set up language before outputing errors in auth.php and signout.php
    to make them appear in the correct language.
  - Security: Fix potential file inclusion issues in src/webmail.php.
    [CAN-2005-0103]
  - Fixed minor bug in DMN plugin that caused it to not correctly set
    lastTargetMailbox.
  - Security: Fix possible XSS issues in src/webmail.php. [CAN-2005-0104]
  - Correct undefined variable usage in src/webmail.php.

Version 1.4.4 RC1 - 31 December 2004
------------------------------------
  - Get alternating row colors of addressbook in sync with mailbox list.
  - Fix bug in detecting the delimiter in a folder moved to trash.
  - Trailing spaces are no longer trimmed from folder names (#818974).
  - Give proper error when PEAR DB not found.