@@ -147,6 +147,8 @@ $defcfg = array( '$config_version' => array( 'name' => _("Config File Version"),
                  '$pop_before_smtp' => array( 'name' => _("POP3 Before SMTP?"),
                                               'type' => SMOPT_TYPE_BOOLEAN,
                                               'default' => false ),
+                 '$encode_header_key' => array( 'name' => _("Header Encryption Key"),
+                                                'type' => SMOPT_TYPE_STRING ),
                  '$invert_time' => array( 'name' => _("Invert Time"),
                                           'type' => SMOPT_TYPE_BOOLEAN ),
                  /* --------------------------------------------------------*/
@@ -229,6 +231,9 @@ $defcfg = array( '$config_version' => array( 'name' => _("Config File Version"),
                                             'type' => SMOPT_TYPE_BOOLEAN ),
                  '$edit_name' => array( 'name' => _("Allow editing of full name"),
                                         'type' => SMOPT_TYPE_BOOLEAN ),
+                 '$hide_auth_header' => array( 'name' => _("Remove username from headers"),
+                                               'comment' => _("Used only when identities can't be modified"),
+                                               'type' => SMOPT_TYPE_BOOLEAN ),
                  '$allow_server_sort' => array( 'name' => _("Use server-side sorting"),
                                                 'type' => SMOPT_TYPE_BOOLEAN,
                                                 'default' => false ),
